--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -88,4 +88,12 @@
         android:padding="@dimen/textview_padding"
         android:elevation="@dimen/elevation"/>
 
+    <Button
+        android:id="@+id/wykresy"
+        android:layout_width="368dp"
+        android:layout_height="69dp"
+        android:layout_row="4"
+        android:layout_column="1"
+        android:text="@string/wykresy" />
+
 </GridLayout>
